@@ -1,5 +1,10 @@
 2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_text_win.[ch]: Renamed from src/text_viewer.[ch]
+	* src/Makefile.am, src/help.c
+
+2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_nav_win.[ch]: Use private struct.
 
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
